--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<title>Outlife Minecraft Server</title>
+	<title>mine304</title>
 </head>
 <body>
 	<div id="myCarousel" class="carousel slide" > 
@@ -59,9 +59,8 @@
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 	$(function(){
-	//轮播图自动播放
 	$('#myCarousel').carousel({
-		interval: 3000,//自动播放4s
+		interval: 3000,
  
 	});
  
